# nyu-programing-for-ds

./: README.md  pyproject.toml
exercises/: basic-python-1.py  basic-python-2.py  questions.py
